    WebKDC to the WebLogin server rather than replacing them with periods.
    This fixes the display of <user-message> elements that contain
    newlines.

    If a user may switch to a different authorization identity, force
    display of the confirmation page in WebLogin even if this is normally
    disabled.  Otherwise, there is no opportunity for the user to change
    identities.

    Fix compilation when remctl support is not enabled.

    Add new factors mp (mobile push) and v (voice), which count as
    separate classes for determining multifactor.  This means the
    combination of those factors with any other factor class will result
    in a synthensized multifactor factor.

    Warn in the mod_webauth documentation that, when using credential
    delegation to a load-balanced pool, all members of that pool must have
    the same Kerberos identity.

WebAuth 4.6.0 (2014-03-18)

    WARNING: When upgrading to this release, you will need to change the
    ownership of the mod_webauth keyring file (named in the WebAuthKeyring
    Apache directive) to the user and group the Apache child processes run
    as.  (This is controlled by the User and Group Apache directives and
    is often something like www-data.)  Previous versions would create
    this file readable only by root, but, as of this release, it must be
    readable and writable by the Apache child processes.

    mod_webauth supports a new configuration directive, WebAuthCookiePath,
    which scopes all cookies set by mod_webauth to the given path.  This
    allows separate sections of the same virtual host to be treated as
    independent for authentication purposes.  This can be useful when
    controlling factor restrictions via the user information service.
    When using this directive with a logout link, be sure that the logout
    configuration (WebAuthDoLogout) is subject to the same
    WebAuthCookiePath directive or it will not work properly.  Be aware